Done with documentation

--- a/html/main_8c.html
+++ b/html/main_8c.html
@@ -95,11 +95,12 @@ Functions</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
-<p>In this variable we are storing the messages added by user</p>
+<p>In this variable we are storing the messages added by user.</p>
+<p>Variable for choice.</p>
 <p>The problem was that the newline I input when reading choice was being taken as input for the next gets(message), and so it was reading an empty string. Because of that I added an artificial getchar after scanf to absorb the newline. <br />
 <br />
- In this case we encrypt the message given by user</p>
-<p>In this case we decrypt the message given by user </p>
+ In this case we encrypt the message given by user.</p>
+<p>In this case we decrypt the message given by user. </p>
 
 </div>
 </div>
